REGRESSION(r94274): selection-change-closes-typing.html fails https://bugs.webkit.org/show_bug.cgi?id=67377

Reviewed by Kent Tamura.

Source/WebCore: 

The problem was that when the shadow DOM is updated by setInnerTextValue, WebKit layer detects the selection
change and calls confirmCompositionWithoutDisturbingSelection, which in turn modifies the shadow DOM by
inserting text.

Fixed the bug by not inserting text in confirmCompositionWithoutDisturbingSelection. It turned out that this
function is only used to cancel composition but never to confirming composition and restoring selection.

Test: platform/mac/editing/input/selection-change-closes-typing-2.html

* editing/Editor.cpp:
(WebCore::Editor::confirmCompositionWithoutDisturbingSelection):
(WebCore::Editor::confirmComposition):

LayoutTests: 

Add a regression test to ensure the same bug doesn't exist in textarea element.

* platform/mac/editing/input/selection-change-closes-typing-2-expected.txt: Copied from
LayoutTests/platform/mac/editing/input/selection-change-closes-typing-expected.txt.
* platform/mac/editing/input/selection-change-closes-typing-2.html: Copied from
LayoutTests/platform/mac/editing/input/selection-change-closes-typing.html.


git-svn-id: svn://svn.chromium.org/blink/trunk@94497 bbb929c8-8fbe-4397-9dbb-9b2b20218538